--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ body{
     background-color: black;
     font-family: 'Inter';
     font-size: large;
-    background-image: url("assets/background.jpg");
+    background-image: url("../assets/background.jpg");
 }
 
 footer{
@@ -34,5 +34,5 @@ footer{
 }
 
 canvas{
-    background-image: url("assets/background.jpg");
+    background-image: url("../assets/background.jpg");
 }
